catkin_ws/logs/flow_logger/build.make.006.log
[35m[1mScanning dependencies of target flow_logger[0m
[ 50%] [32mBuilding CXX object CMakeFiles/flow_logger.dir/src/logger.cpp.o[0m
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/flow_logger/src/logger.cpp: In member function ‘void Logger::flowCallback(geometry_msgs::PoseStamped)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/flow_logger/src/logger.cpp:118:30: error: ‘vision_logname’ was not declared in this scope
   char* logname_w = new char[vision_logname.size()+1];
                              ^
make[2]: *** [CMakeFiles/flow_logger.dir/src/logger.cpp.o] Error 1
make[1]: *** [CMakeFiles/flow_logger.dir/all] Error 2
make: *** [all] Error 2
